# rust-iot-ai-backend-roadmap

./: .gitignore  LICENSE  README.md
docs/: roadmap.md
projects/mqtt-sqlite-api-integration/: Cargo.toml  README.md  iot.db
projects/mqtt-sqlite-api-integration/src/: db.rs  main.rs
projects/mqtt-sqlite-api-integration/src/handlers/: health.rs
projects/mqtt-sqlite-api-integration/src/models/: device.rs  telemetry.rs
projects/mqtt-sqlite-api-integration/src/mqtt/: consumer.rs
projects/week-01-4-20ma-converter/: Cargo.toml  README.md
projects/week-01-4-20ma-converter/src/: main.rs
projects/week-01-mqtt-parser/: Cargo.toml  README.md
projects/week-01-mqtt-parser/src/: main.rs
projects/week-01-ownership/: Cargo.toml  README.md
projects/week-01-rust-syntax/: Cargo.toml  README.md
projects/week-01-sensor-cli/: Cargo.toml  README.md
projects/week-02-alert-event/: Cargo.toml  README.md
projects/week-02-device-struct/: Cargo.toml  README.md
projects/week-02-enums/: Cargo.toml  README.md
projects/week-02-result-option/: Cargo.toml  README.md
projects/week-02-telemetry-struct/: Cargo.toml  README.md
projects/week-03-batch-json/: Cargo.toml  README.md
projects/week-03-modules/: Cargo.toml  README.md
projects/week-03-read-telemetry-json/: Cargo.toml  README.md  telemetry.json
projects/week-03-validate-payload/: Cargo.toml  README.md
projects/week-03-write-report-json/: Cargo.toml  README.md
projects/week-04-axum-api/: README.md
projects/week-05-async-tokio/: README.md
projects/week-06-mqtt-consumer/: README.md
(+61 files in other folders)
