[package]
name = "mqtt-sqlite-api-integration"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
rumqttc = "0.24"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }